# HPI-template

./: README.md
HPI-{{ cookiecutter.username }}/: pyproject.toml
