[project]
version = "0.1.0"
name = "HPI_{{ cookiecutter.username }}"
description = "My HPI modules"
readme = "README.md"
requires-python = ">=3.9"

[[project.authors]]
name = '{{ cookiecutter.username }}'

[project.optional-dependencies]
testing = ["pytest", "mypy", "flake8"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.mypy]
pretty = true
show_error_context = true
show_error_codes = true
check_untyped_defs = true
namespace_packages = true

[tool.pytest.ini_options]
addopts = "-rap --verbose ./tests/"

[tool.setuptools.packages.find]
where = ["."]
include = ["my*"]
exclude = []
namespaces = true
